syntax = "proto3";

package qubic.v1;

option go_package = "github.com/qubic/go-qubic/v1/qubicpb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "core.proto";

message GetEntityInfoRequest {
  string id = 1;
}

message GetTickQuorumVoteRequest {
  uint32 tick = 1;
}

message GetTickDataRequest {
  uint32 tick = 1;
}

message GetTickTransactionsRequest {
  uint32 tick = 1;
}

message GetTickTransactionsStatusRequest {
  uint32 tick = 1;
}

service CoreService {
  rpc GetTickInfo(google.protobuf.Empty) returns (TickInfo) {
    option (google.api.http) = {
      get: "/v1/getTickInfo"
    };
  }

  rpc GetEntityInfo(GetEntityInfoRequest) returns (EntityInfo) {
    option (google.api.http) = {
      post: "/v1/getEntityInfo"
      body: "*"
    };
  };

  rpc GetComputors(google.protobuf.Empty) returns (Computors) {
    option (google.api.http) = {
      get: "/v1/getComputors"
    };
  };

  rpc GetTickQuorumVote(GetTickQuorumVoteRequest) returns (QuorumVote) {
    option (google.api.http) = {
      post: "/v1/getTickQuorumVote"
      body: "*"
    };
  };

  rpc GetTickData(GetTickDataRequest) returns (TickData) {
    option (google.api.http) = {
      post: "/v1/getTickData"
      body: "*"
    };
  };

  rpc GetTickTransactions(GetTickTransactionsRequest) returns (TickTransactions) {
    option (google.api.http) = {
      post: "/v1/getTickTransactions"
      body: "*"
    };
  };

  rpc GetTickTransactionsStatus(GetTickTransactionsStatusRequest) returns (TickTransactionsStatus) {
    option (google.api.http) = {
      post: "/v1/getTickTransactionsStatus"
      body: "*"
    };
  };
}